# $Id$

2008-02-27 Damien Raude-Morvan <drazzib@drazzib.com>
    * Update french translation

2008-02-12 Max Horváth  <max.horvath@freenet.de>
    * Fixed issue in install.php when POSIX is unavailable to PHP
    * Fixed package name of Cache_Lite in Dependency class
    * Updated mail address of Max Horváth

2008-01-16 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix #42 (Node cannot be renamed)

2008-01-16 Benoit Grégoire  <bock@step.polymtl.ca>
	* Temporary patch for problem introduced in [1319]:  the menu did not display where main_area_top is empty (which is actually most places in the admin interface).  This shouldn't have been done in the first place, as it doesn't fix the problem the menu cause of theming, and worse causes people to edit MainUI_Display.tpl, causing such errors.  A network config option should have been provided to allow selecting in what area the menu goes.

2008-01-13 Benoit Grégoire  <bock@step.polymtl.ca>
	* Permission.php:  Fix typo that caused "Tried to check if an object of class Server has a permission of type Network" errors.  Changed the id from NETWORK_PERM_ADD_NEW_NODE to NETWORK_PERM_ADD_NODE so it will auto-delete the corrupted permission.

2008-01-11 Benoit Grégoire  <bock@step.polymtl.ca>
	* Use the Dependency system to include PHPMailer and tweak Mail.php.  You'll need to re-run the Dpenedency stage of the install script. This allows:  Translating PHPMailer error messages, Actually having PHPMailer error messages, and displaying them properly.

2008-01-09 Benoit Grégoire  <bock@step.polymtl.ca>
	* Add gettext calls, fixes #413

2008-01-06 Benoit Grégoire  <bock@step.polymtl.ca>
	* Some more work on the permission system.  At long last, close #358

2008-01-05 Benoit Grégoire  <bock@step.polymtl.ca>
	* French translation update from Frederic Sheedy (sheedf@gmail.com).  Closes #411

2007-12-30 Benoit Grégoire  <bock@step.polymtl.ca>